# enhanced-openai-agent

./: .gitignore  README.md  pyproject.toml
agent/: __init__.py  agent_extensions.py  anthropic_provider.py  citation_helpers.py  citation_parser.py  provider_factory.py
examples/: citation_demo.ipynb
