[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "anthropic-agents"
version = "0.1.0"
description = "Extension for OpenAI Agents SDK to support Anthropic citation capabilities"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = [
    "anthropic>=0.20.0",
    "openai>=1.12.0",
    "litellm>=1.0.0",
    "openai-agents>=0.1.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "jupyter>=1.0.0",
]

[tool.black]
line-length = 88
target-version = ['py310']